Updated Estonian translation

--- a/dselect/po/et.po
+++ b/dselect/po/et.po
@@ -8,10 +8,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: dselect 1.14.4\n"
+"Project-Id-Version: dselect 1.14.5\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2007-05-08 04:15+0300\n"
-"PO-Revision-Date: 2007-06-27 19:14+0300\n"
+"PO-Revision-Date: 2007-07-13 08:22+0300\n"
 "Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <et@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -58,11 +58,11 @@ msgstr "tõrge funktsioonis ioctl(TIOCGWINSZ)"
 
 #: dselect/baselist.cc:60
 msgid "doupdate in SIGWINCH handler failed"
-msgstr ""
+msgstr "tõrge signaali SIGWINCH käsitleja doupdate funktsioonis"
 
 #: dselect/baselist.cc:67
 msgid "failed to restore old SIGWINCH sigact"
-msgstr ""
+msgstr "tõrge signaali SIGWINCH vana sigact'i taastamisel"
 
 #: dselect/baselist.cc:69
 msgid "failed to restore old signal mask"
@@ -74,15 +74,15 @@ msgstr "tõrge vana signaalimaski hankimisel"
 
 #: dselect/baselist.cc:80
 msgid "failed to get old SIGWINCH sigact"
-msgstr ""
+msgstr "tõrge signaali SIGWINCH vana sigact'i hankimisel"
 
 #: dselect/baselist.cc:84
 msgid "failed to block SIGWINCH"
-msgstr "tõrge SIGWINCH blokkimisel"
+msgstr "tõrge signaali SIGWINCH blokkimisel"
 
 #: dselect/baselist.cc:89
 msgid "failed to set new SIGWINCH sigact"
-msgstr ""
+msgstr "tõrge signaalile SIGWINCH uue sigact'i määramisel"
 
 #: dselect/baselist.cc:126
 msgid "failed to allocate colour pair"
@@ -94,7 +94,7 @@ msgstr "tõrge pealkirjaakna loomisel"
 
 #: dselect/baselist.cc:170
 msgid "failed to create whatinfo window"
-msgstr ""
+msgstr "tõrge teabeakna loomisel"
 
 #: dselect/baselist.cc:174
 msgid "failed to create baselist pad"
@@ -133,7 +133,7 @@ msgstr ""
 
 #: dselect/baselist.cc:259
 msgid "Keybindings"
-msgstr ""
+msgstr "Klahviseosed"
 
 #: dselect/baselist.cc:307
 #, c-format
@@ -241,7 +241,7 @@ msgstr ""
 
 #: dselect/bindings.cc:151
 msgid "Search for a package whose name contains a string"
-msgstr ""
+msgstr "Pakkide otsimine paki nimes sisalduva stringi järgi"
 
 #: dselect/bindings.cc:152
 msgid "Repeat last search."
@@ -576,7 +576,7 @@ msgstr ""
 "  ^u                    ^d                      teabe kerimine rea võrra\n"
 "  B, Left-arrow         F, Right-arrow          külgkerimine 1/3 ekraani "
 "võrra\n"
-"  ^b                    ^f                      kÜlgkerimine ühe märgi "
+"  ^b                    ^f                      külgkerimine ühe märgi "
 "võrra\n"
 "(Need klahvid on samad, mis pakkide nimekirja kuvas.)\n"
 "\n"
@@ -685,7 +685,7 @@ msgstr ""
 #: dselect/main.cc:147
 #, c-format
 msgid "Debian `%s' package handling frontend version %s.\n"
-msgstr ""
+msgstr "Debiani `%s' pakihaldusprogrammi kasutajaliidese versioon %s.\n"
 
 #: dselect/main.cc:150
 msgid ""
@@ -786,7 +786,7 @@ msgstr "Lubamatu %s `%s'\n"
 
 #: dselect/main.cc:253
 msgid "screen part"
-msgstr ""
+msgstr "ekraani osa"
 
 #: dselect/main.cc:259
 msgid "Null colour specification\n"
@@ -878,11 +878,11 @@ msgstr "tõrge funktsioonis doupdate"
 
 #: dselect/methlist.cc:168
 msgid "failed to unblock SIGWINCH"
-msgstr ""
+msgstr "tõrge SIGWINCH signaalilt blokeeringu eemaldamisel"
 
 #: dselect/methlist.cc:172
 msgid "failed to re-block SIGWINCH"
-msgstr ""
+msgstr "tõrge SIGWINCH signaali uuesti blokkimisel"
 
 #: dselect/methlist.cc:173
 msgid "getch failed"
@@ -898,7 +898,7 @@ msgstr "Selgitus"
 
 #: dselect/methlist.cc:200
 msgid "No explanation available."
-msgstr ""
+msgstr "Selgitust pole saadaval."
 
 #: dselect/method.cc:64
 #, c-format
@@ -1030,7 +1030,7 @@ msgstr ""
 
 #: dselect/methparse.cc:143
 msgid "EOF in index string"
-msgstr ""
+msgstr "faililõputunnus indeksistringis"
 
 #: dselect/methparse.cc:146
 msgid "index string too long"
@@ -1042,7 +1042,7 @@ msgstr ""
 
 #: dselect/methparse.cc:151
 msgid "EOF before option name start"
-msgstr ""
+msgstr "faililõputunnus enne valiku nime algust"
 
 #: dselect/methparse.cc:155
 msgid "nonalpha where option name start wanted"
@@ -1054,19 +1054,19 @@ msgstr ""
 
 #: dselect/methparse.cc:160
 msgid "EOF in option name"
-msgstr ""
+msgstr "faililõputunnus valiku nimes"
 
 #: dselect/methparse.cc:165
 msgid "newline before summary"
-msgstr ""
+msgstr "reavahetus enne kokkuvõtet"
 
 #: dselect/methparse.cc:167
 msgid "EOF before summary"
-msgstr ""
+msgstr "faililõputunnus enne kokkuvõtet"
 
 #: dselect/methparse.cc:173
 msgid "EOF in summary - missing newline"
-msgstr ""
+msgstr "faililõputunnus kokkuvõttes - puudub reavahetus"
 
 #: dselect/methparse.cc:183
 #, c-format
@@ -1160,7 +1160,7 @@ msgstr "lahtipakitud (üles seadmata)"
 
 #: dselect/pkgdisplay.cc:54
 msgid "failed config"
-msgstr ""
+msgstr "tõrge seadistamisel"
 
 #: dselect/pkgdisplay.cc:55
 msgid "installed"
@@ -1204,7 +1204,7 @@ msgstr ""
 
 #: dselect/pkgdisplay.cc:67
 msgid "!Bug!"
-msgstr ""
+msgstr "!Viga"
 
 #: dselect/pkgdisplay.cc:68
 msgid "Unclassified"
@@ -1408,19 +1408,19 @@ msgstr " (oleku järgi)"
 
 #: dselect/pkgdisplay.cc:261
 msgid " mark:+/=/- terse:v help:?"
-msgstr ""
+msgstr " märgi:+/=/- vähem:v abi:?"
 
 #: dselect/pkgdisplay.cc:262
 msgid " mark:+/=/- verbose:v help:?"
-msgstr ""
+msgstr " märgi:+/=/- rohkem:v abi:?"
 
 #: dselect/pkgdisplay.cc:263
 msgid " terse:v help:?"
-msgstr ""
+msgstr " vähem:v abi:?"
 
 #: dselect/pkgdisplay.cc:264
 msgid " verbose:v help:?"
-msgstr " jutukam:v abi:?"
+msgstr " rohkem:v abi:?"
 
 #: dselect/pkginfo.cc:82
 msgid ""
