Updated Swedish translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-07-24  Peter Karlsson  <peterk@debian.org>
+
+	* sv.po: Updated to 921t.
+
 2007-07-13  Ivar Smolin  <okul@linux.ee>
 
 	* et.po: Updated to 505t416u
