--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,7 @@ dpkg (1.14.6) UNRELEASED; urgency=low
 
   [ Updated dpkg translations ]
   * Dzongkha (Tshewang Norbu). Really Closes: #430931
+  * Swedish (Peter Karlsson).
 
   [ Updated man pages translations ]
   * German (Helge Kreutzmann).
