Man pages cleanup: - Some italics and bold fixes.

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,9 @@
+2007-07-18  Guillem Jover  <guillem@debian.org>
+
+	* dpkg.1: Fix italics and bold usage.
+	* dpkg-divert.8: Likewise.
+	* dpkg-buildpackage.1: Likewise.
+
 2007-07-10  Frank Lichtenheld  <djpig@debian.org>
 
 	* dpkg.1, dpkg-query.1, dpkg-deb.1: Synchronise
