--- a/man/dpkg.1
+++ b/man/dpkg.1
@@ -1,4 +1,4 @@
-.TH dpkg 1 "2007-06-12" "Debian Project" "dpkg suite"
+.TH dpkg 1 "2007-07-18" "Debian Project" "dpkg suite"
 .SH NAME
 dpkg \- package manager for Debian
 .
@@ -228,8 +228,8 @@ than any version: \fBlt\-nl le\-nl ge\-nl gt\-nl\fP. These are provided
 only for compatibility with control file syntax: \fB< << <= = >= >>
 >\fP.
 .TP
-.B dpkg \-\-command\-fd <n>
-Accept a series of commands on input file descriptor \fB<n>\fP. Note:
+.B dpkg \-\-command\-fd \fI<n>\fP
+Accept a series of commands on input file descriptor \fI<n>\fP. Note:
 additional options set on the command line, and thru this file descriptor,
 are not reset for subsequent commands executed during the same run.
 .TP
@@ -587,7 +587,7 @@ with:
 Note that this will not actually install or remove anything, but just
 set the selection state on the requested packages. You will need some
 other application to actually download and install the requested
-packages. For example, run \fBdselect\fP and choose "Install".
+packages. For example, run \fBdselect\fP and choose \fIInstall\fP.
 
 Ordinarily, you will find that \fBdselect\fP(1) provides a more
 convenient way to modify the package selection states.
@@ -595,7 +595,7 @@ convenient way to modify the package selection states.
 .
 .SH ADDITIONAL FUNCTIONALITY
 Additional functionality can be gained by installing any of the
-following packages: \fIapt\fR, \fIaptitude\fR and \fIdebsums\fR.
+following packages: \fBapt\fR, \fBaptitude\fR and \fBdebsums\fR.
 .
 .SH SEE ALSO
 \fBdselect\fP(1),
