--- a/man/dpkg-divert.8
+++ b/man/dpkg-divert.8
@@ -1,4 +1,4 @@
-.TH dpkg\-divert 8 "2007-06-12" "Debian Project" "dpkg utilities"
+.TH dpkg\-divert 8 "2007-08-18" "Debian Project" "dpkg utilities"
 .SH NAME
 dpkg\-divert \- override a package's version of a file
 .
@@ -11,10 +11,10 @@ dpkg\-divert \- override a package's version of a file
 .B dpkg\-divert
 is the utility used to set up and update the list of diversions.
 .PP
-File `diversions' are a way of forcing
+File \fIdiversions\fP are a way of forcing
 .BR dpkg (1)
 not to install a file into its
-location, but to a `diverted' location. Diversions can be used through the
+location, but to a \fIdiverted\fP location. Diversions can be used through the
 Debian package scripts to move a file away when it causes a conflict. System
 administrators can also use it to override some package's configuration
 file, or whenever some files (which aren't marked as 'conffiles') need to be
@@ -110,10 +110,10 @@ dpkg-divert \-\-package wibble \-\-rename \-\-remove /usr/bin/example
 .I /var/lib/dpkg/diversions
 File which contains the current list of diversions of the system. It is
 located in the dpkg administration directory, along with other files
-important to dpkg, such as `status' or `available'.
+important to dpkg, such as \fIstatus\fP or \fIavailable\fP.
 .br
 Note: \fBdpkg\-divert\fP preserves the old copy of this file, with extension
-"\-old", before replacing it with the new one.
+\fI\-old\fP, before replacing it with the new one.
 .
 .SH SEE ALSO
 .BR dpkg (1).
