Man pages cleanup: - Unify ellipsis, argument searator, and remove redundant program name   preceding the options.

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,8 @@ dpkg (1.14.6) UNRELEASED; urgency=low
   [ Guillem Jover ]
   * Man pages cleanup:
     - Some italics and bold fixes.
+    - Unify ellipsis, argument searator, and remove redundant program name
+      preceding the options.
 
   [ Updated scripts translations ]
   * French (Frédéric Bothamy, Christian Perrier).
