--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,5 +1,13 @@
 2007-07-18  Guillem Jover  <guillem@debian.org>
 
+	* dpkg-deb.1: Remove space before ellipsis in parameters.
+	* dpkg-query.1: Likewise.
+	* update-alternatives.8: Likewise.
+	* dpkg.1: Likewise. Use commas instead if pipes to separate
+	alternative options. Remove redundant preceding 'dpkg' from options.
+
+2007-07-18  Guillem Jover  <guillem@debian.org>
+
 	* dpkg.1: Fix italics and bold usage.
 	* dpkg-divert.8: Likewise.
 	* dpkg-buildpackage.1: Likewise.
