Man pages cleanup: - Substitute 'FILES' header with 'SEE ALSO' in dpkg-buildpackage(1),   and remove leftover string from man page split.

--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,8 @@ dpkg (1.14.6) UNRELEASED; urgency=low
     - Some italics and bold fixes.
     - Unify ellipsis, argument searator, and remove redundant program name
       preceding the options.
+    - Substitute 'FILES' header with 'SEE ALSO' in dpkg-buildpackage(1),
+      and remove leftover string from man page split.
 
   [ Updated scripts translations ]
   * French (Frédéric Bothamy, Christian Perrier).
