--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,5 +1,10 @@
 2007-07-18  Guillem Jover  <guillem@debian.org>
 
+	* dpkg-buildpackage.1: Remove ', and' leftover from man page split.
+	Substitute 'FILES' with 'SEE ALSO'.
+
+2007-07-18  Guillem Jover  <guillem@debian.org>
+
 	* dpkg-deb.1: Remove space before ellipsis in parameters.
 	* dpkg-query.1: Likewise.
 	* update-alternatives.8: Likewise.
