--- a/man/dpkg-buildpackage.1
+++ b/man/dpkg-buildpackage.1
@@ -15,7 +15,7 @@ a package.
 .TP
 .B \-b
 Specifies a binary-only build, no source files are to be built and/or
-distributed, and
+distributed.
 .TP
 .B \-B
 Specifies a binary-only build, no architecture independent binary package
@@ -183,7 +183,7 @@ It should be possible to specify spaces and shell metacharacters in
 and initial arguments for
 .IR gain-root-command " and " sign-command .
 .
-.SH FILES
+.SH "SEE ALSO"
 .BR dpkg\-source (1),
 .BR dpkg\-architecture (1),
 .BR dpkg\-genchanges (1),
