Man pages cleanup: - Split option descriptions so that it gets easier to distinguish.

--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,7 @@ dpkg (1.14.6) UNRELEASED; urgency=low
       preceding the options.
     - Substitute 'FILES' header with 'SEE ALSO' in dpkg-buildpackage(1),
       and remove leftover string from man page split.
+    - Split option descriptions so that it gets easier to distinguish.
 
   [ Updated scripts translations ]
   * French (Frédéric Bothamy, Christian Perrier).
