--- a/man/dpkg-source.1
+++ b/man/dpkg-source.1
@@ -1,5 +1,5 @@
 .\" Authors: Ian Jackson
-.TH dpkg\-source 1 "2007-06-12" "Debian Project" "dpkg utilities"
+.TH dpkg\-source 1 "2007-07-18" "Debian Project" "dpkg utilities"
 .SH NAME
 dpkg\-source \- Debian source package (.dsc) manipulation tool
 .
@@ -132,59 +132,60 @@ option when it is called to generate a .orig.tar.gz or .tar.gz file. For
 example, \-ICVS will make tar skip over CVS directories when generating
 a .tar.gz file. The option may be repeated multiple times to list multiple
 filenames to exclude.
+.PP
+All the
+.BI \-s X
+options are mutually exclusive. If you specify more than one only the
+last one will be used.
 .TP
-.BR \-sa , \-sp , \-su , \-sk , \-sA , \-sP , \-sU , \-sK , \-ss " with " \-b
-If
-.BR \-sk " or " \-sp
-is specified
-.B dpkg\-source
-expects the original source as a tarfile, by default
+.B Build options (with -b):
+.PP
+.BR \-sa ", " \-sp ", " \-sk ", " \-su " and " \-sr
+will not overwrite existing tarfiles or directories. If this is
+desired then
+.BR \-sA ", " \-sP ", " \-sK ", " \-sU " and " \-sR
+should be used instead.
+.TP
+.BR \-sk
+Specifies to expect the original source as a tarfile, by default
 .IB package _ upstream-version .orig.tar.gz\fR.
 It will leave this original source in place as a tarfile, or copy it
-to the current directory if it isn't already there
-If
+to the current directory if it isn't already there.
+.TP
 .B \-sp
-is used rather than
+Like
 .B \-sk
-it will remove it again afterwards.
-
-If
-.BR \-su " or " \-sr
-is specified the original source is expected as a directory, by
+but will remove that tarball again afterwards.
+.TP
+.B \-su
+Specifies that the original source is expected as a directory, by
 default
 .IB package - upstream-version .orig
 and
 .B dpkg\-source
-will create a new original source archive from it. If
+will create a new original source archive from it.
+.TP
 .B \-sr
-is used
-.B dpkg\-source will remove that directory after it has been used.
-
-If
+Like
+.B \-su
+but will remove that directory after it has been used.
+.TP
 .B \-ss
-is specified
-.B dpkg\-source
-will expect that the original source is available both as a directory
+Specifies that the original source is available both as a directory
 and as a tarfile. If will use the directory to create the diff, but
 the tarfile to create the
 .BR .dsc .
 This option must be used with care - if the directory and tarfile do
 not match a bad source archive will be generated.
-
-If
+.TP
 .B \-sn
-is specified
-.B dpkg\-source
-will not look for any original source, and will not generate a diff.
+Specifies to not look for any original source, and to not generate a diff.
 The second argument, if supplied, must be the empty string. This is
 used for Debian-specific packages which do not have a separate
 upstream source and therefore have no debianisation diffs.
-
-If
+.TP
 .BR \-sa " or " \-sA
-is specified
-.B dpkg\-source
-will look for the original source archive as a tarfile or as a
+Specifies to look for the original source archive as a tarfile or as a
 directory - the second argument, if any, may be either, or the empty
 string (this is equivalent to using
 .BR \-sn ).
@@ -208,35 +209,24 @@ or raise an error if
 was specified.
 .B \-sA
 is the default.
-
-.BR \-sa ", " \-sp ", " \-sk ", " \-su " and " \-sr
-will not overwrite existing tarfiles or directories. If this is
-desired then
-.BR \-sA ", " \-sP ", " \-sK ", " \-sU " and " \-sR
-should be used instead.
 .TP
-.BR \-sp , \-su , \-sn " with " \-x
+.B Extract options (with \-x):
+.PP
 In all cases any existing original source tree will be removed.
-
-If
+.TP
 .B \-sp
-is used when extracting then the original source (if any) will be left
+Used when extracting then the original source (if any) will be left
 as a tarfile. If it is not already located in the current directory
 or if an existing but different file is there it will be copied there.
-This is the default.
-
+(\fBThis is the default\fP).
+.TP
 .B \-su
-unpacks the original source tree.
-
+Unpacks the original source tree.
+.TP
 .B \-sn
-ensures that the original source is neither copied to the current
+Ensures that the original source is neither copied to the current
 directory nor unpacked. Any original source tree that was in the
 current directory is still removed.
-.PP
-All the
-.B \-sX
-options are mutually exclusive. If you specify more than one only the
-last one will be used.
 .
 .SH BUGS
 The point at which field overriding occurs compared to certain
