--- a/man/dpkg.1
+++ b/man/dpkg.1
@@ -451,16 +451,21 @@ be used with \fB\-i\fP, \fB\-A\fP, \fB\-\-install\fP, \fB\-\-unpack\fP and
 Don't install a package if a newer version of the same package is already
 installed. This is an alias of \fB\-\-refuse\-downgrade\fP.
 .TP
-\fB\-\-root=\fP\fIdir\fP, \fB\-\-admindir=\fP\fIdir\fP, \fB\-\-instdir=\fP\fIdir\fP
-Change default directories. \fBadmindir\fP defaults to
-\fI/var/lib/dpkg\fP and contains many files that give information
-about status of installed or uninstalled packages, etc. \fBinstdir\fP
-defaults to \fI/\fP and refers to the directory where packages are to
-be installed. \fBinstdir\fP is also the directory passed to
-\fBchroot\fP(2) before running package's installation scripts, which
+.BI \-\-admindir= dir
+Change default administrative directory, which contains many files that
+give information about status of installed or uninstalled packages, etc.
+(Defaults to \fI/var/lib/dpkg\fP)
+.TP
+.BI \-\-instdir= dir
+Change default installation directory which refers to the directory where
+packages are to be installed. \fBinstdir\fP is also the directory passed
+to \fBchroot\fP(2) before running package's installation scripts, which
 means that the scripts see \fBinstdir\fP as a root directory.
-Changing \fBroot\fP changes \fBinstdir\fP to \fIdir\fP and
-\fBadmindir\fP to \fIdir\fP\fB/var/lib/dpkg\fP.
+(Defaults to \fI/\fP)
+.TP
+.BI \-\-root= dir
+Changing \fBroot\fP changes \fBinstdir\fP to \fIdir\fP and \fBadmindir\fP
+to \fIdir\fP\fB/var/lib/dpkg\fP.
 .TP
 \fB\-O\fP, \fB\-\-selected\-only\fP
 Only process the packages that are selected for installation. The
