Man pages cleanup: - Unify author and copyright information formatting.

--- a/man/dpkg-checkbuilddeps.1
+++ b/man/dpkg-checkbuilddeps.1
@@ -1,4 +1,4 @@
-.TH dpkg\-checkbuilddeps 1 "2007-06-12" "Debian Project" "dpkg utilities"
+.TH dpkg\-checkbuilddeps 1 "2007-07-18" "Debian Project" "dpkg utilities"
 .SH NAME
 dpkg\-checkbuilddeps \- check build dependencies and conflicts
 .
@@ -29,10 +29,10 @@ be built.
 Show the usage message and exit.
 .
 .SH AUTHOR
-Copyright 2001 Joey Hess
+Copyright (C) 2001 Joey Hess
 .UR mailto:joeyh@debian.org
-<joeyh@debian.org>.
+<joeyh@debian.org>
 .UE
 .sp
 This is free software; see the GNU General Public Licence version 2 or
-later for copying conditions. There is NO warranty.
+later for copying conditions. There is NO WARRANTY.
