--- a/man/dpkg-deb.1
+++ b/man/dpkg-deb.1
@@ -1,4 +1,4 @@
-.TH dpkg\-deb 1 "2007-06-12" "Debian Project" "dpkg suite"
+.TH dpkg\-deb 1 "2007-07-18" "Debian Project" "dpkg suite"
 .SH NAME
 dpkg\-deb \- Debian package archive (.deb) manipulation tool
 .
@@ -242,11 +242,7 @@ package's scripts run and its status and contents recorded.
 .BR dselect (1).
 .
 .SH AUTHOR
-.B dpkg\-deb
-and this manpage were written by Ian Jackson.
-They are Copyright (C) 1995-1996 by him and released under the
-GNU General Public Licence version 2 or later; there is NO WARRANTY. See
-.I /usr/share/doc/dpkg/copyright
-and
-.I /usr/share/common\-licenses/GPL
-for details.
+Copyright (C) 1995-1996 Ian Jackson
+.sp
+This is free software; see the GNU General Public Licence version 2 or
+later for copying conditions. There is NO WARRANTY.
