--- a/man/update-alternatives.8
+++ b/man/update-alternatives.8
@@ -390,15 +390,15 @@ and this manual page, it is a bug,
 either in the implementation or the documentation; please report it.
 .
 .SH AUTHOR
-Debian update\-alternatives is copyright 1995
-Ian Jackson. It is free software; see the GNU General Public Licence
-version 2 or later for copying conditions. There is NO warranty.
+Copyright (C) 1995 Ian Jackson
+.sp
+This is free software; see the GNU General Public Licence version 2 or
+later for copying conditions. There is NO WARRANTY.
 .PP
-This manual page is copyright 1997/98 Charles Briscoe-Smith.
-This is free documentation; see the GNU General Public Licence
-version 2 or later for copying conditions. There is NO WARRANTY.
-.PP
-You can find the GNU GPL in /usr/share/common\-licenses/GPL on any Debian system.
+This manual page is copyright 1997,1998 Charles Briscoe-Smith.
+.sp
+This is free documentation; see the GNU General Public Licence version 2 or
+later for copying conditions. There is NO WARRANTY.
 .
 .SH "SEE ALSO"
 .BR ln (1),
