--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,7 @@ dpkg (1.14.6) UNRELEASED; urgency=low
     - Substitute 'FILES' header with 'SEE ALSO' in dpkg-buildpackage(1),
       and remove leftover string from man page split.
     - Split option descriptions so that it gets easier to distinguish.
+    - Unify author and copyright information formatting.
 
   [ Updated scripts translations ]
   * French (Frédéric Bothamy, Christian Perrier).
