Move variables automatically modified at build time to a new style perl module.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2007-07-21  Guillem Jover  <guillem@debian.org>
+
+	* m4/perl.m4 (DPKG_PROG_PERL): Add support for user overridable
+	PERL_LIBDIR variable, autodetected from the system installation.
+	* scripts/Makefile.am (perllibdir): New variable.
+	(nobase_dist_perllib_DATA): Likewise.
+	(install-data-hook): New target.
+	* scripts/Dpkg.pm: New file.
+
 2007-07-03  Frank Lichtenheld  <djpig@debian.org>
 
 	* configure.ac: Bump version to 1.14.6~.
