Switch 'dpkg-gettext.pl' to a new style perl module Dpkg::Gettext.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,22 @@
 2007-07-22  Guillem Jover  <guillem@debian.org>
 
+	* scripts/dpkg-gettext.pl: Move ...
+	* scripts/Dpkg/Gettext.pm: ... here. Add a package statement.
+	Fix all users.
+	* scripts/Makefile.am (dist_pkglib_SCRIPTS): Remove 'dpkg-gettext.pl'.
+	(nobase_dist_perllib_DATA): Add 'Dpkg/Gettext.pm'.
+
+	* scripts/822-date.pl: Do not push $dpkglibdir into @INC anymore.
+	* scripts/cleanup-info.pl: Likewise.
+	* scripts/controllib.pl: Likewise.
+	* scripts/dpkg-divert.pl: Likewise.
+	* scripts/dpkg-scansources.pl: Likewise.
+	* scripts/dpkg-statoverride.pl: Likewise.
+	* scripts/install-info.pl: Likewise.
+	* scripts/update-alternatives.pl: Likewise.
+
+2007-07-22  Guillem Jover  <guillem@debian.org>
+
 	* scripts/cleanup-info.pl: Use new Dpkg module, and remove variable
 	declarations already done in the module.
 	* scripts/controllib.pl: Likewise.
