Changelog police (self-inflicted and others).

--- a/ChangeLog
+++ b/ChangeLog
@@ -18,7 +18,7 @@
 2007-07-22  Guillem Jover  <guillem@debian.org>
 
 	* scripts/cleanup-info.pl: Use new Dpkg module, and remove variable
-	declarations already done in the module.
+	declarations already present in the module.
 	* scripts/controllib.pl: Likewise.
 	* scripts/dpkg-architecture.pl: Likewise.
 	* scripts/dpkg-checkbuilddeps.pl: Likewise.
