--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -4,9 +4,9 @@
 
 2007-07-13  Ivar Smolin  <okul@linux.ee>
 
-	* et.po: Updated to 505t416u
+	* et.po: Updated to 505t416u.
 
-2007-06-28  Tshewang Norbu  <bumthap2006@hotmail.com>\
+2007-06-28  Tshewang Norbu  <bumthap2006@hotmail.com>
 
 	* dz.po: Updated to 921t.
 
