--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -4,7 +4,7 @@
 
 2007-07-06  Christian Perrier  <bubulle@debian.org>
 
-	* fr.po: re-re-re-re-completed (438t)
+	* fr.po: Re-re-re-re-completed (438t).
 
 2007-07-02  Frank Lichtenheld  <djpig@debian.org>
 
