--- a/dselect/po/ChangeLog
+++ b/dselect/po/ChangeLog
@@ -1,6 +1,6 @@
 2007-07-13  Ivar Smolin  <okul@linux.ee>
 
-	* et.po: Updated to 237t48u
+	* et.po: Updated to 237t48u.
 
 2007-06-05  Christian Perrier  <bubulle@debianpt.org>
 
