Update my email listed in THANKS with a valid one.

--- a/THANKS
+++ b/THANKS
@@ -53,7 +53,7 @@ Peter Karlsson <peterk@debian.org>
 Petr Cech <cech@atrey.karlin.mff.cuni.cz>
 Philippe Batailler <pbatailler@teaser.fr>
 Piotr Roszatycki <dexter@fnet.pl>
-Raphael Hertzog <rhertzog@hrnet.fr>
+Raphael Hertzog <hertzog@debian.org>
 Richard Kettlewell <rjk@sfere.greenend.org.uk>
 Robert Millan <rmh@debian.org>
 Roderick Schertler <roderick@argon.org>
