--- a/debian/changelog
+++ b/debian/changelog
@@ -25,6 +25,9 @@ dpkg (1.14.6) UNRELEASED; urgency=low
   * Dzongkha (Tshewang Norbu). Closes: #430931
   * Swedish (Peter Karlsson).
 
+  [ Updated dselect translations ]
+  * Swedish (Peter Karlsson).
+
   [ Updated man pages translations ]
   * German (Helge Kreutzmann).
 
