Began updating Swedish man page translation.
Merged sv.add format to be consistent with other translations. Started
removing fuzzies.

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2007-07-29  Peter Karlsson  <peterk@debian.org>
+
+	* po/sv.po, po/sv.add: Began updating Swedish translation.
+
 2007-07-21  Guillem Jover  <guillem@debian.org>
 
 	* po/dpkg-man.pot: Regenerated.
