--- a/debian/changelog
+++ b/debian/changelog
@@ -30,6 +30,7 @@ dpkg (1.14.6) UNRELEASED; urgency=low
 
   [ Updated man pages translations ]
   * German (Helge Kreutzmann).
+  * Swedish (Peter Karlsson).
 
  -- Frank Lichtenheld <djpig@debian.org>  Tue, 03 Jul 2007 01:47:56 +0200
 
